--- a/4/styles/styles.css
+++ b/4/styles/styles.css
@@ -88,12 +88,16 @@ body {
 }
 
 .main-index {
-  background-color: #b0c1e6;
-  background-image: url("../images/index/index-background.jpg");
+
   background-size: 1200px 485px;
   background-repeat: no-repeat;
   position: bottom, top;
 
+}
+
+.welcome-logo {
+  background-color: #b0c1e6;
+  background-image: url("../images/index/index-background.jpg");
 }
 
 .page-container {
@@ -134,24 +138,43 @@ body {
   padding-left: 209px;
 }
 
+
+.facts {
+  padding: 0;
+  list-style: none;
+  display: flex;
+  flex-wrap: wrap;
+  margin: 0;
+}
+
+.facts-item.facts-item-wide {
+  flex-basis: 400px;
+  display: flex;
+  flex-wrap: wrap;
+  flex-basis: 400px;
+  flex-grow: 1;
+}
+
+
 .facts-item-sedona {
   font-size: 24px;
   line-height: 28px;
   text-align: center;
   text-transform: uppercase;
   color: #000000;
+
 }
 
 .facts-item-sedona-sedona {
   margin: 0;
-  padding: auto;
+  padding: 0;
   text-align: center;
-  display: flex;
   background: #82B3D3;
   background-size: 400px 384px;
-  max-width: 1200px;
-  justify-content: space-between;
-
+  list-style: none;
+  flex-wrap: wrap;
+  flex-basis: 400px;
+  flex-grow: 0;
 
 }
 
@@ -160,7 +183,7 @@ body {
 .advantages-list {
   display: flex;
   padding: 0;
-  
+
 
 
 }
@@ -201,14 +224,15 @@ body {
 }
 
 .most {
-  display: flex;
 
   background: #82B3D3;
   background-size: 400px 384px;
   min-width: 400px;
   min-height: 384px;
   margin: 0;
-
+  flex-wrap: wrap;
+  flex-basis: 400px;
+  flex-grow: 1;
 
 }
 
@@ -216,33 +240,46 @@ body {
   display: flex;
 }
 
+
+.facts-item {
+  flex-basis: calc(100% / 3);
+  display: flex;
+  flex-wrap: wrap;
+}
+
+.advantages-sedona {
+  display: flex;
+  list-style: none;
+  padding: 0;
+}
+
 .facts-item-3 {
-  margin: 0;
   background-color: #F2F2F2;
-  min-width: 400px;
-  min-height: 384px;
+  margin: 0;
+
   text-align: center;
-  padding: auto;
+  padding: 0;
+
 }
 
 .facts-item-4 {
-  margin: 0;
   background-color: #c6deeeb1;
-  min-width: 400px;
-  min-height: 384px;
+  margin: 0;
   text-align: center;
-  padding: auto;
-
+  padding: 0;
+  
 }
 
 .facts-item-5 {
-  margin: 0;
+
   background-color: #F2F2F2;;
+  margin: 0;
+  margin: 0;
   min-width: 400px;
   min-height: 384px;
   text-align: center;
-  padding: auto;
-
+  padding: 0;
+  flex-grow: 1;
 }
 
 
@@ -282,6 +319,7 @@ body {
   min-height: 411px;
   padding: 0;
   margin: 0;
+  background-color: #b0c1e6;
 
 }
 
