--- a/styles/styles.css
+++ b/styles/styles.css
@@ -112,7 +112,10 @@ body {
   text-transform: uppercase;
   background-size: 160px 37px;
   margin: 14px 70px 14px 0px;
-
+  padding: 9px 15px 8px 15px;
+  width: 160px;
+  height: 37px;
+  
 }
 
 .main-container {
@@ -183,14 +186,10 @@ body {
 }
 
 .facts-item.facts-item-wide {
-  flex-basis: 400px;
-  display: flex;
-  flex-wrap: wrap;
-  flex-basis: 400px;
-  flex-grow: 1;
-
+  display: grid;
+  grid-template-columns: 400px 800px ;
+  justify-self: start;
 }
-
 
 
 
@@ -219,6 +218,10 @@ body {
 
 }
 
+.advantages {
+  width: 1200px;
+
+}
 
 .advantages-list {
   display: flex;
@@ -308,9 +311,9 @@ body {
 .facts-item-3 {
   background-color: #F2F2F2;
   margin: 0;
-
   text-align: center;
   padding: 0;
+  width: 400px;
 
 }
 
@@ -319,11 +322,11 @@ body {
   margin: 0;
   text-align: center;
   padding: 0;
-
+  width: 400px;
 }
 
 .facts-item-5 {
-
+  width: 400px;
   background-color: #F2F2F2;;
   margin: 0;
   margin: 0;
@@ -353,6 +356,7 @@ body {
   line-height: 36px;
   min-width: 574px;
   min-height: 60px;
+
 
 }
 
@@ -496,6 +500,16 @@ body {
 
 }
 
+.catalog {
+  width: 1056px;
+  display: grid;
+  grid-template-columns: 340px 340px 340px;
+  gap: 18px 18px;
+
+
+
+}
+
 .catalog-sedona-sedona {
   display: flex;
   margin: 0px 0px 0px 72px;
@@ -529,10 +543,51 @@ body {
 .hotels-list {
   width: 1089px;
   list-style-type: none;
-  margin: 20px 0px 20px 20px;
   padding: 0px 18px 20px 73px;
+  display: grid;
+  grid-template-columns: 340px 340px 340px;
+  gap: 18px 18px;
+}
+
+.hotels-hotels {
+  display: flex;
+  width: 340px;
+  margin-right: 20px;
 
 }
+
+
+
+.hostels-card-type {
+  width: 140px;
+  margin-right: 20px;
+
+}
+
+.hotels-card-1 {
+  margin-left: 20px;
+
+}
+
+
+.hotels-card-2 {
+  margin-left: 20px;
+
+}
+
+
+
+.hotels-card-3 {
+  margin-left: 20px;
+
+}
+
+
+.hotels-card-4 {
+  margin-left: 20px;
+
+}
+
 
 .pagination-container {
   display: flex;
@@ -542,8 +597,8 @@ body {
 
 .pagination {
   display: flex;
-  margin: 0;
-  padding: 0;
+  margin-left: 73px;
+  padding: 0px;
   list-style-type: none;
 }
 
@@ -688,6 +743,8 @@ body {
   Width: 140px;
   Height: 37px;
   text-decoration-line: none;
+  padding: 9px 15px 8px 15px;
+  margin-right: 20px;
 
 
 }
@@ -704,7 +761,7 @@ body {
   Width: 140px;
   Height: 37px;
   text-decoration-line: none;
-
+  padding: 9px 15px 8px 15px;
 }
 
 .product-card-favorites {
@@ -720,6 +777,7 @@ body {
   Width: 140px;
   Height: 37px;
   text-decoration-line: none;
+  padding: 9px 15px 8px 15px;
 }
 
 .product-card-button-rating {
