--- a/styles/styles.css
+++ b/styles/styles.css
@@ -528,7 +528,7 @@ body {
 
 
 .footer-social-vk {
-  background-image: url("../images/index/vkont.svg");
+  background-image: url("../images/index/vk.svg");
 
 }
 
